more acceptable UI

--- a/meal_addition_page.html
+++ b/meal_addition_page.html
@@ -10,53 +10,40 @@
   <body>
     <header></header>
     <main>
-      <section>
-        <div class="flex flex-wrap">
-          <!-- Navigation -->
-          <nav class="w-full bg-gray-800">
-            <div class="flex items-center justify-center h-12">
-              <div class="flex items-center">
-                <span class="text-white font-semibold text-xl tracking-tight mr-4">Form Sections</span>
-              </div>
-            </div>
-            <div class="px-2 pt-2 pb-4">
-              <ul class="flex flex-col sm:flex-row sm:justify-center sm:text-lg">
-                <li class="nav-item">
-                  <a href="#section1" class="nav-link bg-gray-100 rounded-lg">Section 1</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#section2" class="nav-link">Section 2</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#section3" class="nav-link">Section 3</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#section4" class="nav-link">Section 4</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#section5" class="nav-link">Section 5</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        
-          <!-- Section 1 -->
-          <div id="section1" class="w-full p-4">
-            <h2 class="text-xl font-bold mb-4">Section 1</h2>
-            <form>
-              <div class="mb-4">
-                <label class="block text-gray-700 font-bold mb-2" for="field1">Field 1</label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="field1" type="text" placeholder="Enter field 1">
-              </div>
-              <div class="mb-4">
-                <label class="block text-gray-700 font-bold mb-2" for="field2">Field 2</label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="field2" type="text" placeholder="Enter field 2">
-              </div>
-              <div class="mb-4">
-                <label class="block text-gray-700 font-bold mb-2" for="field3">Field 3</label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="field3" type="text" placeholder="Enter field 3">
-              </div>
-      </section>
+      <header class="text-center py-4">
+        <h1 class="text-2xl font-bold">Meal Status Checking</h1>
+      </header>
+
+      <nav class="bg-gray-100 py-4">
+        <div class="container mx-auto flex justify-center">
+          <a
+            href="#"
+            class="px-6 py-2 rounded-lg text-gray-700 mr-2 hover:text-gray-500 focus:outline-none"
+          >
+            Section 1
+          </a>
+          <a
+            href="#"
+            class="px-6 py-2 rounded-lg text-gray-700 hover:text-gray-500 focus:outline-none"
+          >
+            Section 2
+          </a>
+        </div>
+      </nav>
+
+      <div class="container mx-auto mt-4">
+        <div class="rounded-lg shadow-lg bg-white p-6">
+          <div class="flex items-center justify-center">
+            <!-- Section 1 content here -->
+          </div>
+        </div>
+
+        <div class="rounded-lg shadow-lg bg-white p-6 mt-4 hidden">
+          <div class="flex items-center justify-center">
+            <!-- Section 2 content here -->
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
     <script src="meal_addition_page.js"></script>
