--- a/adding_ingredient.html
+++ b/adding_ingredient.html
@@ -4,85 +4,213 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FSMS - Ingredient Addtion</title>
-    <!-- <link rel="icon" type="image/x-icon" href="name.ico" /> -->
+    <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <header></header>
+    <header class="text-center py-4">
+      <h1 class="text-2xl font-bold">Ingredient Addtion</h1>
+    </header>
+
+    <nav class="bg-gray-100 py-4">
+      <div class="container mx-auto flex justify-center">
+        <a
+          class="move-to-ingredient px-6 py-2 rounded-lg bg-white mr-2 hover:text-gray-500 focus:outline-none"
+        >
+          Ingredient Details
+        </a>
+        <a
+          class="move-to-supplier px-6 py-2 rounded-lg text-gray-700 hover:text-gray-500 focus:outline-none"
+        >
+          Supplier Details
+        </a>
+        <a
+          class="move-to-allergy px-6 py-2 rounded-lg text-gray-700 hover:text-gray-500 focus:outline-none"
+        >
+          Allergy Details
+        </a>
+      </div>
+    </nav>
+
     <main>
-      <header class="text-center py-4">
-        <h1 class="text-2xl font-bold">Ingredient Addtion</h1>
-      </header>
-
-      <nav class="bg-gray-100 py-4">
-        <div class="container mx-auto flex justify-center">
-          <a
-            href="#"
-            class="px-6 py-2 rounded-lg bg-white mr-2 hover:text-gray-500 focus:outline-none"
-          >
-            Ingredient Details
-          </a>
-          <a
-            href="#"
-            class="px-6 py-2 rounded-lg text-gray-700 hover:text-gray-500 focus:outline-none"
-          >
-            Supplier Details
-          </a>
-        </div>
-      </nav>
-
       <div class="container mx-auto mt-4">
-        <div class="rounded-lg shadow-lg bg-white p-6">
-          <div class="flex items-center justify-center">
-            <form class="w-1/4">
-              <div class="mb-4">
-                <label
-                  class="block text-gray-700 font-bold mb-2"
-                  for="username"
-                >
-                  Username
-                </label>
-                <input
-                  class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
-                  id="username"
-                  type="text"
-                  placeholder="Enter username"
-                />
+        <form action="adding_ingredient.php" method="GET">
+          <section id="section-ingredient">
+            <div class="rounded-lg shadow-lg bg-white p-6">
+              <div class="flex items-center justify-center">
+                <form class="w-1/4">
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Name
+                    </label>
+                    <input
+                      class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                      id="ingredient-name"
+                      type="text"
+                      placeholder="Enter the Ingredient's Name"
+                      name="ingredient_name"
+                    />
+                  </div>
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Cost
+                    </label>
+                    <input
+                      class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                      id="ingredient-cost"
+                      placeholder="Enter Cost of the Ingredient"
+                      name="ingredient_cost"
+                    />
+                  </div>
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Purchase Date
+                    </label>
+                    <input
+                      type="date"
+                      id="purchase-date"
+                      class="border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                      name="purchase_date"
+                    />
+                  </div>
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Expire Date
+                    </label>
+                    <input
+                      type="date"
+                      id="expire-date"
+                      class="border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                      name="expire_date"
+                    />
+                  </div>
+                  <div class="mb-4 flex justify-end">
+                    <a
+                      class="move-to-supplier bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
+                    >
+                      Next
+                    </a>
+                  </div>
+                </form>
               </div>
-              <div class="mb-4">
-                <label
-                  class="block text-gray-700 font-bold mb-2"
-                  for="password"
-                >
-                  Password
-                </label>
-                <input
-                  class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
-                  id="password"
-                  type="password"
-                  placeholder="Enter password"
-                />
-              </div>
-              <div class="mb-4">
-                <button
-                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
-                  type="button"
-                >
-                  Sign In
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
+            </div>
+          </section>
 
-        <div class="rounded-lg shadow-lg bg-white p-6 mt-4 hidden">
-          <div class="flex items-center justify-center">
-            <!-- Section 2 content here -->
-          </div>
-        </div>
+          <section id="section-supplier">
+            <div class="rounded-lg shadow-lg bg-white p-6">
+              <div class="flex items-center justify-center">
+                <form class="w-1/4">
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Supplier Name
+                    </label>
+                    <input
+                      type="text"
+                      class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                      id="supplier-name"
+                      placeholder="Enter the Ingredient's Name"
+                      name="supp_name"
+                    />
+                  </div>
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Phone Number
+                    </label>
+                    <input
+                      type="text"
+                      class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                      id="supplier-phone"
+                      placeholder="Enter Supplier's Phone Number"
+                      name="supp_phone"
+                    />
+                  </div>
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Supplier Country
+                    </label>
+                    <input
+                      type="text"
+                      class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                      id="supplier-country"
+                      placeholder="Enter Supplier's Country"
+                      name="supp_country"
+                    />
+                  </div>
+
+                  <!-- compare with dropdown of status_checking.html -->
+                  <!-- <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2">
+                  Supplier Country
+                </label>
+                <input
+                  type="text"
+                  id="Enter Supplier's Country"
+                  class="border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                />
+              </div> -->
+                  <div class="mb-4 flex justify-end">
+                    <a
+                      class="move-to-allergy bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
+                    >
+                      Next
+                    </a>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </section>
+
+          <section id="section-allergy">
+            <div class="rounded-lg shadow-lg bg-white p-6">
+              <div class="flex items-center justify-center">
+                <form class="w-1/4">
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Allergy Type
+                    </label>
+                    <input
+                      type="text"
+                      class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                      id="allergy-type"
+                      placeholder="Enter the Name of the Allergy Type"
+                      name="allergy_type"
+                    />
+                  </div>
+                  <div class="mb-4">
+                    <label class="block text-gray-700 font-bold mb-2">
+                      Severty Level
+                    </label>
+                    <input
+                      type="text"
+                      class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                      id="severty-level"
+                      placeholder="Enter a number from 1-10"
+                      name="severty-level"
+                    />
+                  </div>
+                  <div class="mb-4 flex justify-end">
+                    <input
+                      type="hidden"
+                      name="ingredient_submitted"
+                      value="1"
+                    />
+                    <button
+                      id="submit-ingredient-button"
+                      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
+                      type="submit"
+                      name="submit"
+                    >
+                      Add Ingredient
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </section>
+        </form>
       </div>
     </main>
     <footer></footer>
-    <script src="meal_addition_page.js"></script>
+    <script src="adding_ingredient.js"></script>
   </body>
 </html>
