--- a/status_checking.html
+++ b/status_checking.html
@@ -1,103 +1,116 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FSMS - Meal Status Checking</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FSMS - Meal Status Checking</title>
-  <link rel="icon" type="image/x-icon" href="images/logo.png" />
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body>
-  <header class="text-center py-4 bg-blue-500">
-    <h1 class="text-2xl font-bold my-4">Meal Status Checking</h1>
-    <h1 class="text-lg">Enter Meal Details</h1>
-  </header>
-  <main>
-    <div class="container mx-auto">
-      <div class="rounded-lg shadow-lg bg-white p-6">
-        <div class="flex items-center justify-center">
-          <form class="w-1/4">
-            <div class="mb-4">
-              <label class="block text-gray-700 font-bold mb-2">
-                Chef ID
-              </label>
-              <input class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full" type="text" placeholder="Enter Your Chef ID" />
-            </div>
-            <div class="mb-4">
-              <label class="block text-gray-700 font-bold mb-2">
-                Meal Name
-              </label>
-              <input class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full" type="text" placeholder="Enter Meal Name" />
-            </div>
-            <div class="mb-4">
-              <label class="block text-gray-700 font-bold mb-2">
-                Select Date & Time
-              </label>
-              <input type="datetime-local" id="date-input" class="border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" />
-            </div>
-            <div class="mb-4">
-              <label class="block text-gray-700 font-bold mb-2">
-                Category
-              </label>
-              <input class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full" type="text" placeholder="Vegetarian/Non-Vegetarian/Chinese/Italian etc" />
-            </div>
-            <div class="mb-4 relative inline-block text-left">
-              <div>
+  <body>
+    <header class="text-center py-4 bg-blue-500">
+      <h1 class="text-2xl font-bold my-4">Meal Status Checking</h1>
+      <h1 class="text-lg">Enter Meal Details</h1>
+    </header>
+    <main>
+      <div class="container mx-auto">
+        <div class="rounded-lg shadow-lg bg-white p-6">
+          <div class="flex items-center justify-center">
+            <form class="w-1/4">
+              <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2">
+                  Chef ID
+                </label>
+                <input
+                  class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                  type="text"
+                  placeholder="Enter Your Chef ID"
+                />
+              </div>
+              <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2">
+                  Meal Name
+                </label>
+                <input
+                  class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                  type="text"
+                  placeholder="Enter Meal Name"
+                />
+              </div>
+              <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2">
+                  Select Date & Time
+                </label>
+                <input
+                  type="datetime-local"
+                  id="date-input"
+                  class="border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                />
+              </div>
+              <div class="mb-4">
+                <label class="block text-gray-700 font-bold mb-2">
+                  Category
+                </label>
+                <input
+                  class="appearance-none border rounded-lg py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-full"
+                  type="text"
+                  placeholder="Vegetarian/Non-Vegetarian/Chinese/Italian etc"
+                />
+              </div>
+              <div class="mb-4 relative inline-block text-left">
                 <form action="status_checking.php" method="POST">
-                  <button type="submit" class="inline-flex w-full rounded-md border border-gray-300 px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" id="ingredient-menu" name="dropdown_button" value="0">
+                  <button
+                    class="inline-flex w-full rounded-md border border-gray-300 px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    id="ingredient-menu"
+                  >
                     Select Ingredients
                     <strong id="hero-icon" class="ml-4">˅</strong>
                   </button>
                 </form>
-              </div>
 
-              <!-- ingredients fetched from the database -->
-              <div id="ingredients-container" class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5" role="menu" aria-orientation="vertical" aria-labelledby="ingredient-menu">
-                <div class="py-1" role="none">
-                  <!-- <?php include('status_checking.php'); ?> -->
-
+                <!-- ingredients fetched from the database -->
+                <div
+                  id="ingredients-container"
+                  class="mb-4 hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5"
+                  role="menu"
+                  aria-orientation="vertical"
+                  aria-labelledby="ingredient-menu"
+                >
                   <!-- ******************************************* -->
-                  <?php
-                  if (isset($_POST['dropdown_button'])) {
-                    $query = $conn->query("SELECT ingredient_name FROM
-                    ingredient");
-                    while ($row = $query->fetch(PDO::FETCH_OBJ)) {
-                      echo '<button
-                      class="ingredient-available block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+                  <div id="fetched-ingredients hidden" class="py-1" role="none">
+                    <?php include('status_checking.php'); ?>
+
+                    <!-- ******************************************* -->
+                    <button
+                      class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
                       role="menuitem"
                       tabindex="-1"
                     >
-                      ' . $row->ingredient_name . '</button
-                    >';
-                    }
-                  } ?>
-                  <!-- ******************************************* -->
+                      Select more
+                    </button>
+                  </div>
+                </div>
+                <!-- ---------------------------------------------------- -->
 
-                  <button class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" tabindex="-1">
-                    Select more
+                <div class="mb-4">
+                  <ul id="selected-ingredients" class="mb-4">
+                    Selected ingredients will be added here
+                  </ul>
+                  <button
+                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
+                    type="submit"
+                  >
+                    Check Status
                   </button>
                 </div>
-                <ul id="selected-ingredients" class="mb-4">
-                  Selected ingredients will be added here
-                </ul>
               </div>
-              <!-- ---------------------------------------------------- -->
-
-              <div class="mb-4">
-                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline" type="submit">
-                  Check Status
-                </button>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
-  <footer></footer>
-  <script src="status_checking.js"></script>
-</body>
-
+    </main>
+    <footer></footer>
+    <script src="status_checking.js"></script>
+  </body>
 </html>
