--- a/adding_ingredient.html
+++ b/adding_ingredient.html
@@ -89,6 +89,7 @@
                   </div>
                   <div class="mb-4 flex justify-end">
                     <a
+                      id="move-to-supplier"
                       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
                       href="#section-supplier"
                     >
@@ -154,6 +155,7 @@
               </div> -->
                   <div class="mb-4 flex justify-end">
                     <a
+                      id="move-to-allergy"
                       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
                       href="#section-allergy"
                     >
