CRUD operations compelete with chef update bug

--- a/adding_ingredient/adding_ingredient.html
+++ b/adding_ingredient/adding_ingredient.html
@@ -1,10 +1,15 @@
+<?php
+include_once('../connection.php');
+include('../secure.php');
+?>
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FSMS - Ingredient Addtion</title>
-    <link rel="icon" type="image/x-icon" href="images/logo.png" />
+    <link rel="icon" type="image/x-icon" href="../images/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
