Main Features Completed

--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>FSMS - Log In</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg">
@@ -11,7 +12,7 @@
         <input type="text" name="chef_id" placeholder="Enter Chef ID" />
         <input type="password" name="password" placeholder="Password" />
         <div class="recover">
-          <a href="#">forget password </a>
+          <a href="#">Forgot password? </a>
         </div>
         <input type="hidden" name="logged_in" class="button" value="1" />
         <input type="submit" name="login" class="button" value="Login" />
