--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>FSMS - Sign Up</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg">
@@ -15,12 +16,6 @@
         <input type="text" name="chef_gender" placeholder="Gender (M/F)" />
         <input type="password" name="password" placeholder="Password" />
         <input type="hidden" name="signed_up" class="button" value="1" />
-        <div class="terms">
-          <input type="checkbox" id="checkbox" />
-          <label for="checkbox"
-            >I agree to these <a href="#">terms and conditions</a></label
-          >
-        </div>
         <input type="submit" name="signup" class="button" value="Sign Up" />
       </form>
       >
