--- a/updating_chef.html
+++ b/updating_chef.html
@@ -84,10 +84,9 @@ include('secure.php');
                   />
                 </div>
                 <div class="mb-4">
-                  <input type="hidden" name="update" value="$row->chef_id" />
                   <input
                     type="submit"
-                    name="update_button"
+                    name="update_chef"
                     class="btn"
                     value="Update"
                   />
