--- a/welcome.html
+++ b/welcome.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg">
-    <div class="boxs">
-      <h1>Welcome to Our Food Safety Management System</h1>
-      <br />
-
+  <body class="bg h-screen flex flex-col justify-center items-center">
+    <div>
+      <h1 class="text-4xl shadow-md">
+        Welcome to the Food Safety Management System
+      </h1>
+    </div>
+    <div class="my-6">
       <a
         href="./signup.html"
         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg mr-2"
