--- a/welcome.html
+++ b/welcome.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FSMS - Welcome</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg h-screen flex flex-col justify-center items-center">
     <div>
-      <h1 class="text-4xl shadow-md">
+      <img
+        class="rounded-full w-40 mx-auto"
+        src="./images/logo.png"
+        alt="site logo"
+      />
+      <h1 class="text-4xl text-black font-bold">
         Welcome to the Food Safety Management System
       </h1>
     </div>
     <div class="my-6">
       <a
         href="./signup.html"
-        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg mr-2"
+        class="bg-black hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg mr-2"
         >Sign Up</a
       >
       <a
         href="./login.html"
-        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg mr-2"
+        class="bg-black hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg mr-2"
         >Log In</a
       >
     </div>
