attribute password changed to chef_password

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
       <br />
       <form action="signup_login.php" method="POST">
         <input type="text" name="chef_id" placeholder="Enter Chef ID" />
-        <input type="password" name="password" placeholder="Password" />
+        <input type="password" name="chef_password" placeholder="Enter Chef Password" />
         <input type="hidden" name="logged_in" class="button" value="1" />
         <input type="submit" name="login" class="button" value="Login" />
       </form>
