--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
         <input type="text" name="chef_lname" placeholder="Last Name" />
         <input type="text" name="chef_age" placeholder="Age" />
         <input type="text" name="chef_gender" placeholder="Gender (M/F)" />
-        <input type="password" name="password" placeholder="Password" />
+        <input type="password" name="chef_password" placeholder="Password" />
         <input type="hidden" name="signed_up" class="button" value="1" />
         <input type="submit" name="signup" class="button" value="Sign Up" />
       </form>
