--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FSMS - Log In</title>
+    <title>FSMS - Login</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -12,8 +12,12 @@
       <h1>Login</h1>
       <br />
       <form action="signup_login.php" method="POST">
-        <input type="text" name="chef_id" placeholder="Enter Chef ID" />
-        <input type="password" name="chef_password" placeholder="Enter Chef Password" />
+        <input type="text" name="chef_username" placeholder="Enter Username" />
+        <input
+          type="password"
+          name="chef_password"
+          placeholder="Enter Password"
+        />
         <input type="hidden" name="logged_in" class="button" value="1" />
         <input type="submit" name="login" class="button" value="Login" />
       </form>
