--- a/signup.html
+++ b/signup.html
@@ -12,16 +12,20 @@
       <h1>Sign Up</h1>
       <br />
       <form action="signup_login.php" method="POST">
-        <input type="text" name="chef_id" placeholder="Username" />
+        <input type="text" name="chef_username" placeholder="Username" />
         <input type="text" name="chef_fname" placeholder="First Name" />
         <input type="text" name="chef_lname" placeholder="Last Name" />
         <input type="text" name="chef_age" placeholder="Age" />
-        <input type="text" name="chef_gender" placeholder="Gender (M/F)" />
+        <select name="chef_gender">
+          <option value="" disabled selected>Gender</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+          <option value="Others">Others</option>
+        </select>
         <input type="password" name="chef_password" placeholder="Password" />
         <input type="hidden" name="signed_up" class="button" value="1" />
         <input type="submit" name="signup" class="button" value="Sign Up" />
       </form>
-      >
       <div class="member">
         Already a member? <a href="./login.html"> Login Here </a>
       </div>
