--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <div class="box">
       <h1>Login</h1>
       <br />
-      <form action="signup_login.php" method="POST">
+      <form action="./process_signup_login.php" method="POST">
         <input type="text" name="chef_username" placeholder="Enter Username" />
         <input
           type="password"
