--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
       <h1>Sign Up</h1>
       <br />
       <form action="./process_signup_login.php" method="POST">
-        <input type="text" name="chef_username" placeholder="Username" />
+        <input type="text" name="chef_username" placeholder="Username" required />
         <input type="text" name="chef_fname" placeholder="First Name" />
         <input type="text" name="chef_lname" placeholder="Last Name" />
         <input type="text" name="chef_age" placeholder="Age" />
@@ -22,7 +22,7 @@
           <option value="Female">Female</option>
           <option value="Other">Other</option>
         </select>
-        <input type="password" name="chef_password" placeholder="Password" />
+        <input type="password" name="chef_password" placeholder="Password" required />
         <input type="hidden" name="signed_up" class="button" value="1" />
         <input type="submit" name="signup" class="button" value="Sign Up" />
       </form>
